First route: get list image
