# routers/router.go
@@ -33,8 +33,25 @@ func InitRouter() *gin.Engine {
 	r.POST("/upload", api.UploadImage)
 
 	apiv1 := r.Group("/api/v1")
+	////////////////////////////////////////////////////////////////////
+	///////						Start							////////
+	////////////////////////////////////////////////////////////////////
+
+	//Create example image
+	apiv1.GET("/images/create-example", v1.CreateImages)
+	//Get list images
+	apiv1.GET("/images", v1.GetImages)
+	//Run example container
+	apiv1.GET("/containers/run-example", v1.RunContainers)
+
+	////////////////////////////////////////////////////////////////////
+	///////						End								////////
+	////////////////////////////////////////////////////////////////////
 	apiv1.Use(jwt.JWT())
 	{
+		////////////////////////////////////////////////////////////////////
+		///////						Start							////////
+		////////////////////////////////////////////////////////////////////
 		//获取标签列表
 		apiv1.GET("/tags", v1.GetTags)
 		//新建标签
@@ -60,6 +77,9 @@ func InitRouter() *gin.Engine {
 		apiv1.DELETE("/articles/:id", v1.DeleteArticle)
 		//生成文章海报
 		apiv1.POST("/articles/poster/generate", v1.GenerateArticlePoster)
+		////////////////////////////////////////////////////////////////////
+		///////							End							////////
+		////////////////////////////////////////////////////////////////////
 	}
 
 	return r
